--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build:dev": "webpack --config webpack.config.js",
     "serve": "webpack-dev-server --config webpack.config.js",
     "lint:js": "eslint './src/js/*.{js,jsx}'",
-    "lint:fix": "eslint './src/js/*.{js,jsx}' --fix"
+    "lint:fix": "eslint './src/js/*.{js,jsx}' --fix",
+    "prettier": "prettier --write './src/js/*.{js,jsx}'"
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
@@ -21,6 +22,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
     "html-webpack-plugin": "^3.2.0",
+    "prettier": "^1.15.2",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
