--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,11 @@
 {
   "presets":[
-    "@babel/preset-env"
+    [
+      "@babel/preset-env",
+      {
+        "targets": "> 0.25%, not op_mini all"
+      }
+    ],
+    "@babel/preset-flow"
   ]
 }
