--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
+    "css-loader": "^1.0.1",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-loader": "^2.1.1",
@@ -27,6 +28,7 @@
     "eslint-plugin-react": "^7.11.0",
     "flow-bin": "^0.86.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.4",
     "prettier": "^1.15.2",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
